# hagraph

./: .gitignore  Temperaturen  configure.ac  data.c  data.h  hagraph.c  hagraph.h  libhagraph.c  makefile
allgraphs/: main  main.c  makefile
src/: Makefile.am  hagraph.c
